unpackaged/main/default/objects/certificates__x/certificates__x.object-meta.xml
<CustomObject>
    <description>certificates</description>
    <externalDataSource>P21Orders_Integration</externalDataSource>
    <externalName>certificates</externalName>
    <label>certificates</label>
    <pluralLabel>certificates</pluralLabel>
</CustomObject>