unpackaged/main/default/objects/certificates__x/fields/CertId__c.field-meta.xml
<CustomField>
    <fullName>CertId__c</fullName>
    <description>CertId</description>
    <externalDeveloperName>CertId</externalDeveloperName>
    <label>CertId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>