unpackaged/main/default/objects/certificates__x/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <description>CreatedDate</description>
    <externalDeveloperName>CreatedDate</externalDeveloperName>
    <label>CreatedDate</label>
    <type>Date</type>
</CustomField>