unpackaged/main/default/objects/certificates__x/fields/CustomerId__c.field-meta.xml
<CustomField>
    <fullName>CustomerId__c</fullName>
    <description>CustomerId</description>
    <externalDeveloperName>CustomerId</externalDeveloperName>
    <label>CustomerId</label>
    <length>18</length>
    <referenceTargetField>Account.CID__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Certificates</relationshipLabel>
    <relationshipName>Certificates</relationshipName>
    <type>IndirectLookup</type>
</CustomField>