unpackaged/main/default/objects/certificates__x/fields/ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate__c</fullName>
    <externalDeveloperName>ExpirationDate</externalDeveloperName>
    <label>ExpirationDate</label>
    <type>Date</type>
</CustomField>