unpackaged/main/default/objects/certificates__x/fields/StateName__c.field-meta.xml
<CustomField>
    <fullName>StateName__c</fullName>
    <description>StateName</description>
    <externalDeveloperName>StateName</externalDeveloperName>
    <label>StateName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>